# mcs-best-practices

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  learnings.md  main.py  pyproject.toml  swagger-rest.yaml  swagger.yaml
data/: best_practices.json  governance.json  snippets.json  tips.json  troubleshooting.json
tests/: test_main.py
